src/components/Modal/modal.css
:host(:not([size="fullscreen"])) .modal-panel {
  background-color: var(--sgds-surface-default);
  padding: var(--sgds-padding-xl);
  max-width: var(--sgds-dimension-640);
}
:host([size="sm"]) .modal-panel {
  max-width: var(--sgds-dimension-480);
}

:host([size="md"]) .modal-panel {
  max-width: var(--sgds-dimension-640);
}

:host([size="lg"]) .modal-panel {
  max-width: var(--sgds-dimension-800);
}

:host([size="fullscreen"]) .modal-overlay {
  background-color: var(--sgds-surface-default);
}

.modal {
  display: flex;
  justify-content: center;
  align-items: start;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 105500;
  font-family: var(--sgds-body-font-family);
}

.modal-panel {
  width: 100%;
  border-radius: var(--sgds-border-radius-md);
  position: relative;
  display: flex;
  flex-direction: column;
  gap: var(--sgds-gap-2-xl);
  margin: var(--sgds-margin-sm) var(--sgds-margin-xs);
  max-height: calc(100% - var(--sgds-margin-sm) - var(--sgds-margin-sm));
}



.modal-panel:focus {
  outline: none;
}

.modal-content {
  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
  gap: var(--sgds-gap-2-xl);
  min-height: 0;
  position: relative;
}

.modal-header__close {
  position: absolute;
  top: calc(-1 * var(--sgds-padding-md));
  right: calc(-1 * var(--sgds-padding-md));
}

@media screen and (min-width: 512px) {
  :host([size="fullscreen"]) .modal-panel {
    margin: var(--sgds-margin-sm);
  } 
}

@media screen and (min-width: 768px) {
  :host([size="fullscreen"]) .modal-panel {
    margin: var(--sgds-margin-md);
    max-height: calc(100% - var(--sgds-margin-md) - var(--sgds-margin-md));
  } 
}

@media screen and (min-width: 1024px) {
  :host([size="fullscreen"]) .modal-panel {
    margin: var(--sgds-margin-xl) var(--sgds-margin-xs);
    max-height: calc(100% - var(--sgds-margin-xl) - var(--sgds-margin-xl));
    max-width: var(--sgds-dimension-896);
  } 
}

@media screen and (min-width: 1280px) {
  :host([size="fullscreen"]) .modal-panel {
    max-width: var(--sgds-dimension-1176);
  } 
}

@media screen and (min-width: 1440px) {
  :host([size="fullscreen"]) .modal-panel {
    max-width: var(--sgds-dimension-1320);
  } 
}

.modal.show .modal-panel {
  opacity: 1;
  transform: none;
}

.modal-header {
  flex: 0 0 auto;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  max-width: var(--sgds-dimension-872);
}

.modal-header__title-description {
  display: flex;
  flex-direction: column;
  gap: var(--sgds-gap-sm);
}

:host([size="fullscreen"]) .modal-header__title-description {
  gap: var(--sgds-gap-md);
}

slot[name="title"]::slotted(*) {
  --sgds-margin-2-xs: var(--sgds-margin-none);
  --sgds-margin-xs: var(--sgds-margin-none);
  --sgds-font-size-6: var(--sgds-font-size-4);
  display: flex;
  flex: 1 1 auto;
  align-items: center;
  gap: 1rem;
  margin: var(--sgds-margin-none, var(--sgds-margin-xs, --sgds-margin-2-xs));
  line-height: var(--sgds-line-height-heading);
  font-size: var(--sgds-font-size-6, --sgds-font-size-4);
}

slot[name="description"]::slotted(*) {
  --sgds-paragraph-spacing-xl: var(--sgds-margin-none);
  margin: var(--sgds-margin-none, --sgds-paragraph-spacing-xl);
  color: var(--sgds-color-subtle);
  line-height: var(--sgds-line-height-body);
}

.modal-body {
  flex: 1 1 auto;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

.modal-body slot::slotted(*) {
  --sgds-paragraph-spacing-xl: var(--sgds-margin-none);
}

.modal-footer {
  flex: 0 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
  gap: var(--sgds-gap-md);
  padding-top: var(--sgds-padding-md);
}

.modal:not(.has-footer) .modal-footer {
  display: none;
}

.modal-overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: var(--sgds-bg-overlay);
}

[hidden] {
  display: none;
}

